Fix product and generated material deletion
